cluster/apps/homeassistant/homeassistant-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    goldilocks.fairwinds.com/enabled: "true"
