cluster/apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-matter
  namespace: homeassistant
spec:
  selector:
    app: homeassistant-matter
  ports:
    - protocol: TCP
      port: 5580
      name: matter

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-mqtt
  namespace: homeassistant
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 1883
      name: mqtt
    - protocol: TCP
      port: 9001
      name: mqtt-websocket

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-esphome
  namespace: homeassistant
spec:
  selector:
    app: esphome
  ports:
    - protocol: TCP
      port: 6052
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: homeassistant
spec:
  selector:
    app: music-assistant
  ports:
    - protocol: TCP
      port: 8095
      name: http
