cluster/apps/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflare-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "home-assistant.${SECRET_DOMAIN}"
      secretName: homeassistant-tls
  rules:
    - host: "home-assistant.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-esphome
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - secretName: homeassistant-esphome-tls
      hosts:
        - "esphome.${SECRET_DOMAIN}"
  rules:
    - host: "esphome.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant-esphome
                port:
                  number: 6052

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "music-assistant.${SECRET_DOMAIN}"
      secretName: music-assistant-tls
  rules:
    - host: "music-assistant.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: music-assistant
                port:
                  number: 8095

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-matter
  namespace: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "matter.${SECRET_DOMAIN}"
      secretName: homeassistant-matter-tls
  rules:
    - host: "matter.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant-matter
                port:
                  number: 5580
